@@ -1,9 +1,10 @@
 # create an indicator for the number of missing x in data set
+
+
 I <- indicator( 
-   number_missing(x)     # number of missing x
- , number_missing(x,y)   # number of missing x and y
- , number_missing()      # number of missing variables
- , fraction_missing()    # fraction of missing variables
+ sum(is.na(.))               # number of missing variables
+ , sum(is.na(.[c("x","y")])) # number of missing x and y
+ , mean(is.na(.))            # fraction of missing variables
  , sum(x)
  , mean(x)
 ) 
