@@ -38,8 +38,8 @@ Collate:
     'confrontation.R'
     'barplot.R'
     'compare.R'
-    'doc_syntax.R'
     'factory.R'
+    'functions.R'
     'lumberjack.R'
     'retailers.R'
     'utils.R'
